--- a/nais.config.yaml
+++ b/nais.config.yaml
@@ -11,8 +11,9 @@ spec:
   team: {{team}}
   port: 8080
   ingresses:
-    - {{ingress1}}
-    - {{ingress2}}
+    {{ingress1}}
+    {{ingress2}}
+    {{ingress3}}
   liveness:
     path: {{baseurl}}/internal/isAlive
     initialDelay: 10
