--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,12 +40,19 @@ jobs:
             docker push $IMAGE_NAME
       - deploy:
           til: dev-sbs
-          ingress1: >-
-            - https://$REPO_NAME.nais.oera-q.local
-          ingress2: >-
-            - https://www-q1.nav.no/person/$REPO_NAME
-          ingress3: >-
-            - https://www-q0.nav.no/person/$REPO_NAME
+          command: >
+            cat > ./nais.variables.json << EOF
+                {
+                  "reponame": "$"REPO_NAME",
+                  "version": "$IMAGE_VERSION",
+                  "baseurl": "/"person/$REPO_NAME",
+                  "ingresses": [
+                    "https://$REPO_NAME.nais.oera-q.local",
+                    "https://www-q1.nav.no/person/$REPO_NAME",
+                    "https://www-q0.nav.no/person/$REPO_NAME"
+                  ]
+                }
+            EOF
 
   deploy-til-prod:
     docker:
@@ -55,23 +62,24 @@ jobs:
       - sett-miljovariabler
       - deploy:
           til: prod-sbs
-          ingress1:
-            - https://$REPO_NAME.nais.oera.no
-          ingress2:
-            - https://www.nav.no/person/$REPO_NAME
+          command: >
+            cat > ./nais.variables.json << EOF
+                {
+                  "reponame": "$REPO_NAME",
+                  "version": "$IMAGE_VERSION",
+                  "baseurl": "/person/$REPO_NAME",
+                  "ingresses": [
+                    "https://$REPO_NAME.nais.oera.no",
+                    "https://www.nav.no/person/$REPO_NAME"
+                  ]
+                }
+            EOF
 
 commands:
   deploy:
     parameters:
       til:
         type: string
-      ingress1:
-        type: string
-      ingress2:
-        type: string
-      ingress3:
-        type: string
-        default:
     steps:
       - run:
           name: Deployer til << parameters.til >>
@@ -82,12 +90,7 @@ commands:
                 --resource=nais.config.yaml \
                 --cluster=<< parameters.til >> \
                 --repository=$CIRCLE_PROJECT_USERNAME/$REPO_NAME \
-                --var baseurl=/person/$REPO_NAME \
-                --var ingress1=<< parameters.ingress1 >> \
-                --var ingress2=<< parameters.ingress2 >> \
-                --var ingress3=<< parameters.ingress2 >> \
-                --var reponame=$REPO_NAME \
-                --var version=$IMAGE_VERSION \
+                --vars=nais.variables.json
                 --key=gh_deploy_key.pem \
                 --ref=$COMMIT_SHORT \
                 --appid=34043
