--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ commands:
       - run:
           name: Definer NAIS variabler
           command: >
-            jq --arg city "$city" '{"first_name":$city}' > nais.variablesgit stat.yaml
+            jq --arg city "$city" '{"first_name":$city}' > nais.variables.yaml
       - run:
           name: Deployer til << parameters.til >>
           command: |
