--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,21 +59,18 @@ commands:
       - run:
           name: Definer NAIS template variabler
           command: |
-            if [ '<< parameters.til >>' = 'dev-sbs' ]; then
-              jq \
+            jq \
                 --arg baseurl "/person/$REPO_NAME" \
                 --arg version "$IMAGE_VERSION" \
                 --arg reponame "$REPO_NAME" \
                 --argjson ingresses '["https://$REPO_NAME.nais.oera-q.local","https://www-q0.nav.no/person/$REPO_NAME"]' \
-              '{ baseurl:$baseurl, version: $version, reponame:$reponame, ingresses:$ingresses }' > nais.variables.json \
-            ; else
-              jq \
+                '{ baseurl:$baseurl, version: $version, reponame:$reponame, ingresses:$ingresses }' > dev-sbs.vars.json
+            jq \
                 --arg baseurl "/person/$REPO_NAME" \
                 --arg version "$IMAGE_VERSION" \
                 --arg reponame "$REPO_NAME" \
                 --argjson ingresses '["https://$REPO_NAME.nais.oera-q.local","https://www-q0.nav.no/person/$REPO_NAME"]' \
-              '{ baseurl:$baseurl, version: $version, reponame:$reponame, ingresses:$ingresses }' > nais.variables.json \
-            ; fi
+                '{ baseurl:$baseurl, version: $version, reponame:$reponame, ingresses:$ingresses }' > prod-sbs.vars.json
       - run:
           name: Deployer til << parameters.til >>
           command: |
@@ -83,7 +80,7 @@ commands:
                 --resource=nais.config.yaml \
                 --cluster=<< parameters.til >> \
                 --repository=$CIRCLE_PROJECT_USERNAME/$REPO_NAME \
-                --vars=nais.variables.json \
+                --vars=<< parameters.til >>.vars.json \
                 --key=gh_deploy_key.pem \
                 --ref=$COMMIT_SHORT \
                 --appid=34043
