--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,20 +57,32 @@ commands:
         type: string
     steps:
       - run:
-          name: Definer NAIS template variabler
+          name: Definer dev-sbs template variabler
           command: |
-            jq -n \
-                --arg baseurl "/person/$REPO_NAME" \
-                --arg version "$IMAGE_VERSION" \
-                --arg reponame "$REPO_NAME" \
-                --argjson ingresses '["https://$REPO_NAME.nais.oera-q.local","https://www-q0.nav.no/person/$REPO_NAME"]' \
-                '{ baseurl:$baseurl, version: $version, reponame:$reponame, ingresses:$ingresses }' >> dev-sbs.vars.json
-            jq -n
-                --arg baseurl "/person/$REPO_NAME" \
-                --arg version "$IMAGE_VERSION" \
-                --arg reponame "$REPO_NAME" \
-                --argjson ingresses '["https://$REPO_NAME.nais.oera-q.local","https://www-q0.nav.no/person/$REPO_NAME"]' \
-                '{ baseurl:$baseurl, version: $version, reponame:$reponame, ingresses:$ingresses }' >> prod-sbs.vars.json
+            jq -n '{
+                "baseurl": "'/person/$REPO_NAME'",
+                "version": "'$IMAGE_VERSION'",
+                "reponame": "'$REPO_NAME'",
+                "ingresses": [
+                  "'https://$REPO_NAME.nais.oera-q.local'",
+                  "'https://www-q1.nav.no/person/$REPO_NAME'"
+                  "'https://www-q0.nav.no/person/$REPO_NAME'"
+                ]
+            }' | tee -a nais.dev-sbs.vars.json
+
+      - run:
+          name: Definer prod-sbs template variabler
+          command: |
+            jq -n '{
+                "baseurl": "'/person/$REPO_NAME'",
+                "version": "'$IMAGE_VERSION'",
+                "reponame": "'$REPO_NAME'",
+                "ingresses": [
+                  "'https://$REPO_NAME.nais.oera.no'",
+                  "'https://www.nav.no/person/$REPO_NAME'"
+                ]
+            }' | tee -a nais.prod-sbs.vars.json
+
       - run:
           name: Deployer til << parameters.til >>
           command: |
