Oppdater arbeidsforhold, legg til støtte for Q0 og Q1 (#112)
* Støtte for Q0 og Q1

* Oppdater styling

* Legg til tabs style

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.4.5",
-    "@navikt/arbeidsforhold": "latest",
+    "@navikt/arbeidsforhold": "^1.1.7",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "core-js": "^2.5.7",
@@ -32,7 +32,7 @@
     "less-watch-compiler": "^1.13.0",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
-    "nav-frontend-alertstriper": "^3.0.3",
+    "nav-frontend-alertstriper": "^3.0.4",
     "nav-frontend-alertstriper-style": "^2.0.2",
     "nav-frontend-chevron": "^1.0.9",
     "nav-frontend-chevron-style": "^0.3.4",
@@ -56,15 +56,15 @@
     "nav-frontend-modal": "^1.0.28",
     "nav-frontend-modal-style": "^0.3.29",
     "nav-frontend-paneler": "^1.0.17",
-    "nav-frontend-paneler-style": "^0.3.15",
+    "nav-frontend-paneler-style": "^0.3.16",
     "nav-frontend-skjema": "^1.0.67",
     "nav-frontend-skjema-style": "^1.0.40",
     "nav-frontend-spinner": "^1.0.18",
     "nav-frontend-spinner-style": "^0.2.5",
     "nav-frontend-tabs": "0.0.32",
     "nav-frontend-tabs-style": "0.0.18",
-    "nav-frontend-typografi": "^2.0.12",
-    "nav-frontend-typografi-style": "^1.0.13",
+    "nav-frontend-typografi": "^2.0.13",
+    "nav-frontend-typografi-style": "^1.0.14",
     "nav-frontend-veileder": "^2.0.11",
     "nav-frontend-veileder-style": "^2.0.8",
     "nav-frontend-veilederpanel": "^0.1.14",
