--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@babel/core": "^7.4.5",
     "@navikt/arbeidsforhold": "^1.1.7",
     "calidation": "^1.16.2",
-    "classnames": "^2.2.6",
     "core-js": "^2.5.7",
     "fetch-mock": "^7.3.3",
     "intl": "^1.2.5",
@@ -83,11 +82,12 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-scrollable-anchor": "^0.6.1",
+    "react-select": "^3.0.4",
     "typescript": "^3.5.1"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.26.0",
     "@types/calidation": "^1.16.0",
+    "@types/classnames": "^2.2.9",
     "@types/fetch-mock": "^7.3.1",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.8",
@@ -96,6 +96,9 @@
     "@types/react-intl": "^2.3.18",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-scrollable-anchor": "^0.6.0",
+    "@types/react-select": "^3.0.4",
+    "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
     "less": "^3.9.0",
     "less-plugin-npm-import": "^2.1.0",
     "less-watch-compiler": "^1.13.0",
