--- a/package.json
+++ b/package.json
@@ -23,13 +23,10 @@
   "dependencies": {
     "@babel/core": "^7.4.5",
     "@navikt/arbeidsforhold": "^1.1.7",
-    "babel-polyfill": "^6.26.0",
-    "classnames": "^2.2.6",
+    "calidation": "^1.16.2",
     "core-js": "^2.5.7",
     "fetch-mock": "^7.3.3",
     "intl": "^1.2.5",
-    "less-plugin-npm-import": "^2.1.0",
-    "less-watch-compiler": "^1.13.0",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
     "nav-frontend-alertstriper": "^3.0.4",
@@ -45,6 +42,8 @@
     "nav-frontend-hjelpetekst-style": "^0.3.29",
     "nav-frontend-ikoner-assets": "^1.0.1",
     "nav-frontend-js-utils": "^1.0.7",
+    "nav-frontend-knapper": "^1.0.33",
+    "nav-frontend-knapper-style": "^0.3.28",
     "nav-frontend-lenkepanel": "^1.0.29",
     "nav-frontend-lenkepanel-style": "^0.3.25",
     "nav-frontend-lenker": "^1.0.27",
@@ -71,7 +70,7 @@
     "nav-frontend-veilederpanel-style": "0.0.17",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
@@ -83,9 +82,12 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-scrollable-anchor": "^0.6.1",
+    "react-select": "^3.0.4",
     "typescript": "^3.5.1"
   },
   "devDependencies": {
+    "@types/calidation": "^1.16.0",
+    "@types/classnames": "^2.2.9",
     "@types/fetch-mock": "^7.3.1",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.8",
@@ -94,7 +96,12 @@
     "@types/react-intl": "^2.3.18",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-scrollable-anchor": "^0.6.0",
+    "@types/react-select": "^3.0.4",
+    "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
     "less": "^3.9.0",
+    "less-plugin-npm-import": "^2.1.0",
+    "less-watch-compiler": "^1.13.0",
     "prettier": "^1.18.2",
     "tslint": "^5.17.0",
     "tslint-react": "^4.0.0"
