Legg til støtte for nedlastingsknapp

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fetch-mock": "^7.3.3",
     "ibantools": "^2.2.0",
     "intl": "^1.2.5",
+    "js-file-download": "^0.4.8",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
     "nav-frontend-alertstriper": "^3.0.4",
@@ -76,7 +77,6 @@
     "react-day-picker": "^7.3.2",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
-    "react-json-view": "^1.19.1",
     "react-modal": "^3.8.1",
     "react-moment": "^0.9.2",
     "react-motion": "^0.5.2",
