--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -17,7 +17,7 @@ jobs:
           echo ::set-env name=IMAGE_NAME::$(echo ${GITHUB_REPOSITORY})
       - name: Build docker image
         run: |
-          echo ${GITHUB_ACCESS_TOKEN} | docker login ${IMAGE_REGISTRY} -u "x-access-token" --password-stdin
+          echo ${GITHUB_ACCESS_TOKEN} | docker login -u "x-access-token" --password-stdin ${IMAGE_REGISTRY}
           docker build -t $IMAGE_NAME:$IMAGE_VERSION .
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
