--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -12,15 +12,15 @@ jobs:
         uses: actions/checkout@v1
       - name: Define environment variables
         run: |
-          echo ::set-env name=IMAGE_REGISTRY::https://docker.pkg.github.com
+          echo ::set-env name=IMAGE_REGISTRY::docker.pkg.github.com
           echo ::set-env name=IMAGE_VERSION::$(echo ${GITHUB_REF:10})
           echo ::set-env name=IMAGE_NAME::$(echo ${GITHUB_REPOSITORY})
       - name: Build docker image
         run: |
-          echo ${GITHUB_ACCESS_TOKEN} | docker login ${IMAGE_REGISTRY} -u "x-access-token" --password-stdin
+          echo ${GITHUB_TOKEN} | docker login ${IMAGE_REGISTRY} -u "x-access-token" --password-stdin
           docker build -t $IMAGE_NAME:$IMAGE_VERSION .
         env:
-          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
+          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Push docker image
         run: |
           docker push $REGISTRY/$IMAGE_NAME:$IMAGE_VERSION
