--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -17,10 +17,10 @@ jobs:
           echo ::set-env name=IMAGE_NAME::$(echo ${GITHUB_REPOSITORY})
       - name: Build docker image
         run: |
-          echo $GITHUB_TOKEN | docker login $IMAGE_REGISTRY -u "x-access-token" --password-stdin
+          echo $GITHUB_TOKEN | docker login -u "x-access-token" --password-stdin $IMAGE_REGISTRY
           docker build -t $IMAGE_NAME:$IMAGE_VERSION .
         env:
-          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Push docker image
         run: |
           docker push $REGISTRY/$IMAGE_NAME:$IMAGE_VERSION
