--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -17,7 +17,7 @@ jobs:
           echo ::set-env name=IMAGE_NAME::$(echo ${GITHUB_REPOSITORY})
       - name: Build docker image
         run: |
-          echo $GITHUB_TOKEN | docker login -u "x-access-token" --password-stdin $IMAGE_REGISTRY
+          echo $GITHUB_TOKEN | docker login $IMAGE_REGISTRY -u "x-access-token" --password-stdin
           docker build -t $IMAGE_NAME:$IMAGE_VERSION .
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
