--- a/.nais/config.dev.yaml
+++ b/.nais/config.dev.yaml
@@ -2,28 +2,25 @@
 apiVersion: nais.io/v1alpha1
 kind: Application
 metadata:
-  name: {{reponame}}
+  name: chatbot-assets
   namespace: default
   labels:
     team: {{team}}
 spec:
-  image: navikt/{{reponame}}:{{version}}
+  image: {{image}}:{{tag}}
   team: {{team}}
   port: 8080
   ingresses:
-  {{#each ingresses }}
-    - {{ this }}
-  {{/each}}
+    - https://www-q0.nav.no/person/chatbot-assets
   liveness:
-    path: {{baseurl}}/internal/isAlive
+    path: /person/chatbot-assets/internal/isAlive
     initialDelay: 10
   readiness:
-    path: {{baseurl}}/internal/isReady
+    path: /person/chatbot-assets/internal/isReady
     initialDelay: 10
   replicas:
     min: 2
-    max: 4
-  webproxy: true
+    max: 3
   resources:
     limits:
       cpu: '3'
