--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "calidation": "^1.16.2",
     "core-js": "^2.5.7",
     "fetch-mock": "^7.3.3",
+    "file-saver": "^2.0.2",
     "ibantools": "^2.2.0",
     "intl": "^1.2.5",
-    "js-file-download": "^0.4.8",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
     "nav-frontend-alertstriper": "^3.0.4",
@@ -91,6 +91,7 @@
     "@types/calidation": "^1.16.0",
     "@types/classnames": "^2.2.9",
     "@types/fetch-mock": "^7.3.1",
+    "@types/file-saver": "^2.0.1",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.8",
     "@types/react": "16.8.19",
