--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "@types/react-intl": "^3.0.0",
+    "@types/react-modal": "^3.10.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-scrollable-anchor": "^0.6.0",
     "@types/react-select": "^3.0.5",
