--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-saver": "^2.0.2",
     "ibantools": "^2.2.0",
     "intl": "^1.2.5",
+    "js-cookie": "^2.2.1",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
     "nav-frontend-alertstriper": "^3.0.4",
@@ -92,6 +93,7 @@
     "@types/fetch-mock": "^7.3.1",
     "@types/file-saver": "^2.0.1",
     "@types/jest": "24.0.13",
+    "@types/js-cookie": "^2.2.4",
     "@types/node": "12.0.8",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
