--- a/.github/workflows/deploy.q2.yml
+++ b/.github/workflows/deploy.q2.yml
@@ -40,11 +40,10 @@ jobs:
           echo $IMAGE_REGISTRY/$IMAGE_NAME > .docker_image
           echo $IMAGE_VERSION > .docker_tag
       - name: Deploy
-        uses: navikt/deployment-cli/action@0.4.1
+        uses: nais/deploy/actions/deployment-cli@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          namespace: q2
           cluster: dev-sbs
           team: personbruker
-          resources: .nais/config.dev.yaml
+          resources: .nais/config.q2.yaml
