--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -40,10 +40,15 @@ jobs:
           echo $IMAGE_REGISTRY/$IMAGE_NAME > .docker_image
           echo $IMAGE_VERSION > .docker_tag
       - name: Deploy
-        uses: nais/deploy/actions/deployment-cli@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: nais/deploy/actions/deploy@master
         with:
-          cluster: dev-sbs
-          team: personbruker
-          resources: .nais/config.q0.yaml
+          CLUSTER: dev-sbs
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          RESOURCE: .nais/config.yaml
+          VAR: |
+            namespace=q0,
+            team=personbruker,
+            app=personopplysninger,
+            ingress=https://www-q0.nav.no/person/personopplysninger,
+            image=$IMAGE_REGISTRY/$IMAGE_NAME,
+            tag=$IMAGE_VERSION
