--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -47,10 +47,10 @@ jobs:
           CLUSTER: dev-sbs
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           RESOURCE: .nais/config.yaml
-          VAR: |
-            namespace=default,
-            team=personbruker,
-            app=personopplysninger,
-            ingress=https://www.nav.no/person/personopplysninger,
-            image=$IMAGE_REGISTRY/$IMAGE_NAME,
-            tag=$IMAGE_VERSION
+          VAR:
+            - namespace=default
+            - team=personbruker
+            - app=personopplysninger
+            - ingress=https://www.nav.no/person/personopplysninger
+            - image=$IMAGE_REGISTRY/$IMAGE_NAME
+            - tag=$IMAGE_VERSION
