--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -42,14 +42,14 @@ jobs:
           echo $IMAGE_VERSION > .docker_tag
       - name: Deploy
         uses: nais/deploy/actions/deploy@master
-        env:
+        with:
           CLUSTER: dev-sbs
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           RESOURCE: .nais/config.yaml
-          VAR: |
-            namespace=q0,
-            team=personbruker,
-            app=personopplysninger,
-            ingress=https://www-q0.nav.no/person/personopplysninger,
-            image=$IMAGE_REGISTRY/$IMAGE_NAME,
-            tag=$IMAGE_VERSION
+          VAR:
+            - namespace=q0
+            - team=personbruker
+            - app=personopplysninger
+            - ingress=https://www-q0.nav.no/person/personopplysninger
+            - image=$IMAGE_REGISTRY/$IMAGE_NAME
+            - tag=$IMAGE_VERSION
