--- a/.github/workflows/deploy.q1.yml
+++ b/.github/workflows/deploy.q1.yml
@@ -46,10 +46,10 @@ jobs:
           CLUSTER: dev-sbs
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           RESOURCE: .nais/config.yaml
-          VAR: |
-            namespace=q1,
-            team=personbruker,
-            app=personopplysninger,
-            ingress=https://www-q1.nav.no/person/personopplysninger,
-            image=$IMAGE_REGISTRY/$IMAGE_NAME,
-            tag=$IMAGE_VERSION
+          VAR:
+            - namespace=q1
+            - team=personbruker
+            - app=personopplysninger
+            - ingress=https://www-q1.nav.no/person/personopplysninger
+            - image=$IMAGE_REGISTRY/$IMAGE_NAME
+            - tag=$IMAGE_VERSION
