--- a/.github/workflows/deploy.q2.yml
+++ b/.github/workflows/deploy.q2.yml
@@ -46,4 +46,10 @@ jobs:
           CLUSTER: dev-sbs
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           RESOURCE: .nais/config.yaml
-          VAR: "[namespace=q2,team=personbruker,app=personopplysninger,ingress=https://www-q2.nav.no/person/personopplysninger,image=$IMAGE_REGISTRY/$IMAGE_NAME,tag=$IMAGE_VERSION]"
+          VAR:
+            namespace: q2
+            team: personbruker
+            app: personopplysninger
+            ingress: https://www-q2.nav.no/person/personopplysninger
+            image: $IMAGE_REGISTRY/$IMAGE_NAME
+            tag: $IMAGE_VERSION
