--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -41,16 +41,20 @@ jobs:
         run: |
           echo $IMAGE_REGISTRY/$IMAGE_NAME > .docker_image
           echo $IMAGE_VERSION > .docker_tag
+      - name: Generate nais variables
+        run: |
+          cat > .nais/vars.yaml <<EOF
+          namespace: default
+          team: personbruker
+          app: personopplysninger
+          ingress: https://www.nav.no/person/personopplysninger
+          image: $IMAGE_REGISTRY/$IMAGE_NAME
+          tag: $IMAGE_VERSION
+          EOF
       - name: Deploy
         uses: nais/deploy/actions/deploy@master
-        env:
+        with:
           CLUSTER: dev-sbs
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           RESOURCE: .nais/config.yaml
-          VAR:
-            - namespace=default
-            - team=personbruker
-            - app=personopplysninger
-            - ingress=https://www.nav.no/person/personopplysninger
-            - image=$IMAGE_REGISTRY/$IMAGE_NAME
-            - tag=$IMAGE_VERSION
+          VARS: .nais/vars.yaml
