--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -53,7 +53,7 @@ jobs:
           EOF
       - name: Deploy
         uses: nais/deploy/actions/deploy@master
-        with:
+        env:
           CLUSTER: dev-sbs
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           RESOURCE: .nais/config.yaml
