--- a/.github/workflows/deploy.q1.yml
+++ b/.github/workflows/deploy.q1.yml
@@ -52,7 +52,7 @@ jobs:
           EOF
       - name: Deploy
         uses: nais/deploy/actions/deploy@master
-        with:
+        env:
           CLUSTER: dev-sbs
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           RESOURCE: .nais/config.yaml
