--- a/.github/workflows/deploy.q6.yml
+++ b/.github/workflows/deploy.q6.yml
@@ -45,7 +45,7 @@ jobs:
           cat > .nais/vars.yaml <<EOF
           namespace: q6
           team: personbruker
-          reponame: personopplysninger
+          app: personopplysninger
           ingresses:
             - https://www-q6.nav.no/person/personopplysninger
           image: $IMAGE_REGISTRY/$IMAGE_NAME
