--- a/.nais/config.yaml
+++ b/.nais/config.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     team: personbruker
 spec:
-  image: {{image}}:{{tag}}
+  image: {{image}}:{{version}}
   team: personbruker
   port: 8080
   ingresses:
