--- a/.nais/config.yaml
+++ b/.nais/config.yaml
@@ -2,7 +2,7 @@
 apiVersion: nais.io/v1alpha1
 kind: Application
 metadata:
-  name: personopplysinger
+  name: personopplysninger
   namespace: {{namespace}}
   labels:
     team: personbruker
