--- a/.github/workflows/deploy.q6.yml
+++ b/.github/workflows/deploy.q6.yml
@@ -21,13 +21,12 @@ jobs:
       - name: Define client-side environment
         run: |
           echo ::set-env name=REACT_APP_MILJO::q6
-          echo ::set-env name=REACT_APP_BASE_URL::https://www-q6.nav.no
-          echo ::set-env name=REACT_APP_APP_URL::https://www-q6.nav.no/person/personopplysninger
+          echo ::set-env name=REACT_APP_URL::https://www-q6.nav.no/person/personopplysninger
+          echo ::set-env name=REACT_APP_PDL_URL::https://www-q6.nav.no/person/pdl-fullmakt-ui
           echo ::set-env name=REACT_APP_API_URL::https://www-q6.nav.no/person/personopplysninger-api
           echo ::set-env name=REACT_APP_DSOP_URL::https://www-q6.nav.no/person/dsop-api
-          echo ::set-env name=REACT_APP_TJENESTE_URL::https://tjenester-q6.nav.no
+          echo ::set-env name=REACT_APP_TJENESTER_URL::https://tjenester-q6.nav.no
           echo ::set-env name=REACT_APP_LOGIN_URL::https://loginservice-q.nav.no/login
-          echo ::set-env name=REACT_APP_LOGOUT_URL::https://loginservice-q.nav.no/slo
       - uses: actions/setup-node@v1
       - run: npm ci
       - run: npm i @navikt/arbeidsforhold@latest
